--- a/test/config_hex.cfg
+++ b/test/config_hex.cfg
@@ -4,6 +4,10 @@ process TEST = {
 
      module hexDump = EcalHexDumperModule{
 	 untracked int32 verbosity = 0
+	 untracked bool writeDCC = false
+	 untracked int32 beg_DCC_fed_id = 0
+	 untracked int32 end_DCC_fed_id = 35
+        	untracked string filename = 'dump.bin'
       }
      
      path p = {ecalEBunpacker, hexDump}
@@ -15,14 +19,14 @@ process TEST = {
 
 #     source = DAQEcalTBInputService{
 #               untracked vstring fileNames = { 'file:/localdisk/franzoni/data/H4-000028180-SM2-TEST_PULSE-MGPA' }
-#	       untracked int32 maxEvents = -1
+	#	       untracked int32 maxEvents = -1
 #               untracked bool isBinary = true
 #    }
 
          source = PoolSource {
-                   untracked vstring fileNames={'file:/localdisk/franzoni/data/h4b.00002bee.A.evf_gio.root'}
-                    #untracked string catalog ="file:PoolFileCatalog_data.xml "
-                    untracked int32 maxEvents = -1
+                   untracked int32 maxEvents = 10
+                   untracked vstring fileNames={'file:/localdisk/franzoni/data/h4b.00011511.A.0.0.root'}
+                   #untracked string catalog ="file:PoolFileCatalog_data.xml "
                    untracked uint32 debugVebosity = 10
                    untracked bool   debugFlag     = true
                   }
