--- a/test/config_hex.cfg
+++ b/test/config_hex.cfg
@@ -1,5 +1,6 @@
 process TEST = { 
 
+     module ecalEBunpacker = EcalDCCUnpackingModule{ }
 
      module hexDump = EcalHexDumperModule{
 	 untracked int32 verbosity = 0
@@ -8,8 +9,8 @@ process TEST = {
 	 untracked int32 end_DCC_fed_id = 35
         	untracked string filename = 'dump.bin'
       }
-
-     path p = {hexDump}
+     
+     path p = {ecalEBunpacker, hexDump}
 
 
 
