--- a/test/config_hex.cfg
+++ b/test/config_hex.cfg
@@ -15,26 +15,27 @@ process TEST = {
 
 
 
-
-#     source = DAQEcalTBInputService{
-#               untracked vstring fileNames = { 'file:/localdisk/franzoni/data/H4-000028180-SM2-TEST_PULSE-MGPA' }
-	#	       untracked int32 maxEvents = -1
-#               untracked bool isBinary = true
-#    }
-
-         source = PoolSource {
-                   untracked int32 maxEvents = 10
-                   untracked vstring fileNames={'file:/localdisk/franzoni/data/h4b.00011511.A.0.0.root'}
-                   #untracked string catalog ="file:PoolFileCatalog_data.xml "
-                   untracked uint32 debugVebosity = 10
-                   untracked bool   debugFlag     = true
-                  }
+# if getting data from a raw binary file
+     source = DAQEcalTBInputService{
+               untracked vstring fileNames = { 'file:/localdisk/franzoni/data/H4-000028180-SM2-TEST_PULSE-MGPA' }
+               untracked int32 maxEvents = -1
+               untracked bool isBinary = true
+    }
 
 
+# if getting data from a .root pool file
+#      source = PoolSource {
+#                untracked vstring fileNames={'file:/localdisk/franzoni/data/h4b.00011511.A.0.0.root'}
+#                untracked int32 maxEvents = -1
+#                untracked uint32 debugVebosity = 10
+#                untracked bool   debugFlag     = true
+#               }
 
 
 
-################################ logs
+
+
+################################ configuring logs and verbosity
      service = MessageLogger{
        untracked vstring destinations = { "cout" }
 #       untracked vstring debugModules = { "ecalEBunpacker" }
@@ -51,7 +52,6 @@ process TEST = {
          untracked bool noLineBreaks = true
        }
      }
- 
 
 
 
