digi and hex dumpers improved for ECAL installation

--- a/test/config_hex.cfg
+++ b/test/config_hex.cfg
@@ -35,23 +35,23 @@ process TEST = {
 
 
 
-################################ configuring logs and verbosity
-     service = MessageLogger{
-       untracked vstring destinations = { "cout" }
-#       untracked vstring debugModules = { "ecalEBunpacker" }
-#       untracked vstring debugModules = { "ecalMonitorModule" }
-       untracked vstring debugModules = { "*" }
-       untracked vstring categories = { "EcalTBInputService",
-                                        "EcalBarrelMonitor"
-                                      }
-       untracked PSet cout = { untracked string threshold = "DEBUG"
-         untracked PSet default = { untracked int32 limit = 100000 }
-         untracked PSet EcalTBInputService = { untracked int32 limit = 1000000 }
-         untracked PSet EcalBarrelMonitorModule = { untracked int32 limit = 1000000 }
-         untracked bool noTimeStamps = true
-         untracked bool noLineBreaks = true
-       }
-     }
+################################# configuring logs and verbosity
+#     service = MessageLogger{
+#       untracked vstring destinations = { "cout" }
+##       untracked vstring debugModules = { "ecalEBunpacker" }
+##       untracked vstring debugModules = { "ecalMonitorModule" }
+#       untracked vstring debugModules = { "*" }
+#       untracked vstring categories = { "EcalTBInputService",
+#                                        "EcalBarrelMonitor"
+#                                      }
+#       untracked PSet cout = { untracked string threshold = "DEBUG"
+#         untracked PSet default = { untracked int32 limit = 100000 }
+#         untracked PSet EcalTBInputService = { untracked int32 limit = 1000000 }
+#         untracked PSet EcalBarrelMonitorModule = { untracked int32 limit = 1000000 }
+#         untracked bool noTimeStamps = true
+#         untracked bool noLineBreaks = true
+#       }
+#     }
 
 
 
