--- a/test/digiDumper.cfg
+++ b/test/digiDumper.cfg
@@ -3,6 +3,7 @@ process TESTDUMPER = {
 # if getting data from a raw binary file
      source = DAQEcalTBInputService{
                untracked vstring fileNames = { 'file:/data/franzoni/data/cosm-sm26/H4-000039328-SM26-TEST_PULSE-MGPA' }
+               untracked uint32 skipEvents = 0
 	       untracked int32 maxEvents = 5
                untracked bool isBinary = true
     }
@@ -21,9 +22,26 @@ process TESTDUMPER = {
 
 # verbosity =0:  only headings
      module digi = EcalDigiDumperModule{
-	 untracked int32 verbosity      = 1
+        untracked int32 verbosity      = 1
+
+        # selection on sm number in the barrel (1... 36; 1 with tb unpacker)
+        # if not specified or value set to -1, no selection will be applied
+        untracked int32 ieb_id      = 1
+
+        untracked bool memErrors    = false
+        untracked bool cryDigi      = true
+        untracked bool pnDigi       = true
+        untracked bool tpDigi       = false
+
+	 untracked int32 mode           = 2
+ 
+         # if mode is 1 specify these parameters
 	 untracked int32 numChannel     = 3
 	 untracked int32 numPN          = 2
+
+         # if mode is 2 specify these otherparameters
+	 untracked vint32  listChannels = { 13, 14, 15 }
+	 untracked vint32  listPns = { 1, 7, 9 }
       }
      
 
