added  possibility to request from conf file a list of towers to be dumped

--- a/test/digiDumper.cfg
+++ b/test/digiDumper.cfg
@@ -11,8 +11,8 @@ process TESTDUMPER = {
 
 # if getting data from a .root pool file
 #       source = PoolSource {
-#           untracked int32 maxEvents = -1
-#           untracked vstring fileNames={'file:/localdisk/franzoni/data/h4b.00015785.A.0.0.root'}
+#           untracked int32 maxEvents = 5
+#           untracked vstring fileNames={'file:/data/franzoni/data/p5-sm12/P5_Co.00000218.A.0.0.root'}
 #           untracked uint32 debugVebosity = 10
 #           untracked bool   debugFlag     = true
 #          }
@@ -40,8 +40,9 @@ process TESTDUMPER = {
 	 untracked int32 numPN          = 2
 
          # if mode is 2 specify these otherparameters
-	 untracked vint32  listChannels = { 13, 14, 15 }
-	 untracked vint32  listPns = { 1, 7, 9 }
+	 untracked vint32  listChannels = { 1000, 1001 }
+	 untracked vint32  listTowers = { 1 }
+	 untracked vint32  listPns = { 1, 9 }
       }
      
 
